--- a/outros/Functions.ipynb
+++ b/outros/Functions.ipynb
@@ -821,6 +821,59 @@
     "    lines = f.readlines()\n",
     "lines"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a893b80",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Bytes e Unicode com arquivos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "101b3c8f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = 'teste.txt'\n",
+    "sink_path = 'sink.txt'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "6d6271b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(path) as source:\n",
+    "    with open(sink_path, 'xt', encoding='iso-8859-1') as sink:\n",
+    "        sink.write(source.read())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "6b50ca1a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sasas\n",
+      "1212\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(sink_path, encoding='iso-8859-1') as f:\n",
+    "    print(f.read(10))"
+   ]
   }
  ],
  "metadata": {
