--- a/outros/ag_busca.ipynb
+++ b/outros/ag_busca.ipynb
@@ -109,6 +109,96 @@
    "source": [
     "busca_profundidade(grafo, 2, 4)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "5797a904",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grafo = {0: {1, 3},\n",
+    "         1: {0, 3, 6},\n",
+    "         2: {4, 5},\n",
+    "         3: {1, 6},\n",
+    "         4: {2, 6},\n",
+    "         5: {2},\n",
+    "         6: {1, 3, 4}}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "d1b9cbe6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "8cc5fa6c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "antes {}\n",
+      "no 0 {0: 0}\n",
+      "no_viz 1\n",
+      "antes {0: 0}\n",
+      "no 1 {0: 0, 1: 1}\n",
+      "no_viz 0\n",
+      "no_viz 3\n",
+      "antes {0: 0, 1: 1}\n",
+      "no 3 {0: 0, 1: 1, 3: 2}\n",
+      "no_viz 1\n",
+      "no_viz 6\n",
+      "antes {0: 0, 1: 1, 3: 2}\n",
+      "no 6 {0: 0, 1: 1, 3: 2, 6: 3}\n",
+      "no_viz 1\n",
+      "no_viz 3\n",
+      "no_viz 4\n",
+      "antes {0: 0, 1: 1, 3: 2, 6: 1}\n",
+      "no 4 {0: 0, 1: 1, 3: 2, 6: 1, 4: 4}\n",
+      "no_viz 2\n",
+      "antes {0: 0, 1: 1, 3: 2, 6: 1, 4: 4}\n",
+      "no 2 {0: 0, 1: 1, 3: 2, 6: 1, 4: 4, 2: 5}\n",
+      "no_viz 4\n",
+      "no_viz 5\n",
+      "antes {0: 0, 1: 1, 3: 2, 6: 1, 4: 4, 2: 5}\n",
+      "no 5 {0: 0, 1: 1, 3: 2, 6: 1, 4: 4, 2: 5, 5: 6}\n",
+      "no_viz 2\n",
+      "re no 5 6 set() False 7\n",
+      "re no 2 5 set() False 7\n",
+      "no_viz 6\n",
+      "re no 4 4 set() True 7\n",
+      "re no 6 1 {6} False 7\n",
+      "re no 3 1 {6} True 7\n",
+      "no_viz 6\n",
+      "re no 1 1 {1, 6} True 7\n",
+      "no_viz 3\n",
+      "re no 0 0 {0, 1, 6} True 7\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(0, {0, 1, 6}, True, 7, {0: 0, 1: 1, 3: 1, 6: 1, 4: 4, 2: 5, 5: 6})"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "busca_articulações(grafo, 0)"
+   ]
   }
  ],
  "metadata": {
