Formatando os capítulos 4 e 5

--- a/analise de dados/cap5.ipynb
+++ b/analise de dados/cap5.ipynb
@@ -13,6 +13,27 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Capítulo 5 - Introdução ao pandas"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 5.1 - Introdução às estruturas de dados do pandas"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Series"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 2,
       "metadata": {
@@ -696,6 +717,13 @@
       ],
       "source": [
         "obj"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### DataFrame"
       ]
     },
     {
@@ -2081,14 +2109,12 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 65,
+      "cell_type": "markdown",
       "metadata": {
         "trusted": true
       },
-      "outputs": [],
       "source": [
-        "# Possíveis entradas de dados para o construtor de DataFrame: pág 257"
+        "🗒️ Possíveis entradas de dados para o construtor de DataFrame - pág 257"
       ]
     },
     {
@@ -2143,14 +2169,12 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 68,
+      "cell_type": "markdown",
       "metadata": {
         "trusted": true
       },
-      "outputs": [],
       "source": [
-        "# Objetos Index"
+        "### Objetos Index"
       ]
     },
     {
@@ -2486,36 +2510,30 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 84,
+      "cell_type": "markdown",
       "metadata": {
         "trusted": true
       },
-      "outputs": [],
       "source": [
-        "# Alguns métodos e propriedades de Index: pág 261"
+        "🗒️ Alguns métodos e propriedades de Index - pág 261"
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 85,
+      "cell_type": "markdown",
       "metadata": {
         "trusted": true
       },
-      "outputs": [],
       "source": [
-        "# Funcionalidades Essenciais"
+        "## 5.2 - Funcionalidades essenciais"
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 86,
+      "cell_type": "markdown",
       "metadata": {
         "trusted": true
       },
-      "outputs": [],
       "source": [
-        "# Reindexação"
+        "### Reindexação"
       ]
     },
     {
@@ -2948,14 +2966,19 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
       "metadata": {
         "trusted": true
       },
-      "outputs": [],
       "source": [
-        "# Argumentos da função reindex: pág 266"
+        "🗒️ Argumentos da função reindex - pág 266"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Descartando entradas de um eixo"
       ]
     },
     {
@@ -3414,14 +3437,12 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 113,
+      "cell_type": "markdown",
       "metadata": {
         "trusted": true
       },
-      "outputs": [],
       "source": [
-        "# Indexação, seleção e filtragem"
+        "### Indexação, seleção e filtragem"
       ]
     },
     {
@@ -4185,14 +4206,12 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 134,
+      "cell_type": "markdown",
       "metadata": {
         "trusted": true
       },
-      "outputs": [],
       "source": [
-        "# Seleção loc e iloc"
+        "### Seleção com loc e iloc"
       ]
     },
     {
@@ -4433,25 +4452,21 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 141,
+      "cell_type": "markdown",
       "metadata": {
         "trusted": true
       },
-      "outputs": [],
       "source": [
-        "# Opções de indexação com DataFrame: pág 277"
+        "🗒️ Opções de indexação com DataFrame - pág 277"
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 142,
+      "cell_type": "markdown",
       "metadata": {
         "trusted": true
       },
-      "outputs": [],
       "source": [
-        "# Índices inteiros"
+        "### Índices inteiros"
       ]
     },
     {
@@ -4650,14 +4665,12 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 152,
+      "cell_type": "markdown",
       "metadata": {
         "trusted": true
       },
-      "outputs": [],
       "source": [
-        "# Aritmética e alinhamento de dados"
+        "### Aritmética e alinhamento de dados"
       ]
     },
     {
@@ -5237,14 +5250,12 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 168,
+      "cell_type": "markdown",
       "metadata": {
         "trusted": true
       },
-      "outputs": [],
       "source": [
-        "# Métodos Aritméticos com valores para preenchimento"
+        "### Métodos aritméticos com valores para preenchimento"
       ]
     },
     {
@@ -5858,14 +5869,12 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 179,
+      "cell_type": "markdown",
       "metadata": {
         "trusted": true
       },
-      "outputs": [],
       "source": [
-        "# Métodos aritméticos flexíveis: pág 286"
+        "🗒️ Métodos aritméticos flexíveis - pág 286"
       ]
     },
     {
@@ -9332,14 +9341,6 @@
       "source": [
         "result = data.apply(pd.value_counts).fillna(0)\n",
         "result"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "# Capítulo 6 \n",
-        "#### Carga de dados, armazenagem e formatos de arquivo"
       ]
     }
   ],
