adicionando tratamento dos dados

--- a/aprendizado de máquina/housing.ipynb
+++ b/aprendizado de máquina/housing.ipynb
@@ -1079,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1096,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1108,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1117,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1126,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1135,7 +1135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1144,7 +1144,7 @@
        "SimpleImputer(strategy='median')"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1155,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1165,7 +1165,7 @@
        "       1164.     ,  408.     ,    3.54155])"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1176,7 +1176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1186,7 +1186,7 @@
        "       1164.     ,  408.     ,    3.54155])"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1197,7 +1197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1206,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1222,7 +1222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1241,7 +1241,7 @@
        "Name: ocean_proximity, dtype: object"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1253,7 +1253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1262,7 +1262,7 @@
        "array([0, 1, 0, 1, 2, 3, 2, 2, 2, 2], dtype=int64)"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1274,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1283,7 +1283,7 @@
        "Index(['INLAND', 'NEAR OCEAN', '<1H OCEAN', 'NEAR BAY', 'ISLAND'], dtype='object')"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1294,7 +1294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1303,7 +1303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1313,7 +1313,7 @@
        "\twith 16512 stored elements in Compressed Sparse Row format>"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1326,7 +1326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1341,7 +1341,7 @@
        "       [1., 0., 0., 0., 0.]])"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1352,23 +1352,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'\\nfrom sklearn.preprocessing import CategoricalEncoder\\ncat_encoder = CategoricalEncoder()\\nhousing_cat_reshaped = housing_cat.values.reshape(-1, 1)\\nhousing_cat_1hot = cat_encoder.fit_transform(housing_cat_reshaped)\\nhousing_cat_1hot'"
+       "'from sklearn.preprocessing import CategoricalEncoder\\ncat_encoder = CategoricalEncoder()\\nhousing_cat_reshaped = housing_cat.values.reshape(-1, 1)\\nhousing_cat_1hot = cat_encoder.fit_transform(housing_cat_reshaped)\\nhousing_cat_1hot'"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\"\"\"\n",
-    "from sklearn.preprocessing import CategoricalEncoder\n",
+    "\n",
+    "\"\"\"from sklearn.preprocessing import CategoricalEncoder\n",
     "cat_encoder = CategoricalEncoder()\n",
     "housing_cat_reshaped = housing_cat.values.reshape(-1, 1)\n",
     "housing_cat_1hot = cat_encoder.fit_transform(housing_cat_reshaped)\n",
@@ -1377,7 +1377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1386,7 +1386,7 @@
        "'\\ncat_encoder = CategoricalEncoder(encoding=\"onehot-dense\")\\nhousing_cat_1hot = cat_encoder.fit_transform(housing_cat_reshaped)\\nhousing_cat_1hot\\n'"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1401,7 +1401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1413,6 +1413,224 @@
    "metadata": {},
    "source": [
     "### Customize Transformadores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.base import BaseEstimator, TransformerMixin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rooms_ix, bedrooms_ix, population_ix, household_ix = 3, 4, 5, 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CombinedAttributesAdder(BaseEstimator, TransformerMixin):\n",
+    "    def __init__(self, add_bedrooms_per_room = True): # sem *args ou **kargs\n",
+    "        self.add_bedrooms_per_room = add_bedrooms_per_room\n",
+    "    def fit(self, X, y=None):\n",
+    "        return self # nothing else to do\n",
+    "    def transform(self, X, y=None):\n",
+    "        rooms_per_household = X[:, rooms_ix] / X[:, household_ix]\n",
+    "        population_per_household = X[:, population_ix] / X[:, household_ix]\n",
+    "        if self.add_bedrooms_per_room:\n",
+    "            bedrooms_per_room = X[:, bedrooms_ix] / X[:, rooms_ix]\n",
+    "            return np.c_[X, rooms_per_household, \n",
+    "                            population_per_household, \n",
+    "                            bedrooms_per_room]\n",
+    "        else:\n",
+    "            return np.c_[X, rooms_per_household, population_per_household]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "attr_adder = CombinedAttributesAdder(add_bedrooms_per_room=False)\n",
+    "housing_extra_attribs = attr_adder.transform(housing.values)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Escalonamento de Características"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Normalização ou Padronização"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pipelines de Transformação"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.preprocessing import StandardScaler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_pipeline = Pipeline([\n",
+    "    ('imputer', SimpleImputer(strategy=\"median\")),\n",
+    "    ('attribs_adder', CombinedAttributesAdder()),\n",
+    "    ('std_scaler', StandardScaler)\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class DataFrameSelector(BaseEstimator, TransformerMixin):\n",
+    "    def __init__(self, attribute_names):\n",
+    "        self.attribute_names = attribute_names\n",
+    "    def fit(self, X, y=None):\n",
+    "        return self\n",
+    "    def transform(self, X):\n",
+    "        return X[self.attribute_names].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_attribs = list(housing_num)\n",
+    "cat_attribs = [\"ocean_proximity\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_pipeline = Pipeline([\n",
+    "    ('selector', DataFrameSelector(num_attribs)),\n",
+    "    ('imputer', SimpleImputer(strategy=\"median\")),\n",
+    "    ('attribs_adder', CombinedAttributesAdder()),\n",
+    "    ('std_scaler', StandardScaler()),\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# OneHotEncoder\n",
+    "cat_pipeline = Pipeline([\n",
+    "    ('selector', DataFrameSelector(cat_attribs)),\n",
+    "    ('encoder', OneHotEncoder()),\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.pipeline import FeatureUnion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "full_pipeline = FeatureUnion(transformer_list=[\n",
+    "    ('num_pipeline', num_pipeline),\n",
+    "    ('cat_pipeline', cat_pipeline),\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "housing_prepared = full_pipeline.fit_transform(housing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<16512x16 sparse matrix of type '<class 'numpy.float64'>'\n",
+       "\twith 198144 stored elements in Compressed Sparse Row format>"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "housing_prepared"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(16512, 16)"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "housing_prepared.shape"
    ]
   }
  ],
